--- a/wordcamp.org/wp-content/themes/wordcamp-base-v2/package.json
+++ b/wordcamp.org/wp-content/themes/wordcamp-base-v2/package.json
@@ -5,8 +5,9 @@
 	"author": "Daryn St. Pierre",
 	"devDependencies": {
 		"grunt": "~0.4.1",
-		"grunt-contrib-watch": "~0.5.2",
+		"grunt-contrib-cssmin": "~0.6.1",
 		"grunt-contrib-sass": "~0.4.1",
-		"grunt-contrib-cssmin": "~0.6.1"
+		"grunt-contrib-watch": "~0.5.2",
+		"grunt-sassdoc": "~1.1.0"
 	}
 }
